[Feat] 여행스페이스 권한처리
`+` validateSpace